kube/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-crud-app
  template:
    metadata:
      name: user-crud-app
      labels:
        app: user-crud-app
    spec:
      containers:
        - name: user-crud-app
          image: mksikayo/otus-hw4-app
          command: [ "java", "-jar", "/app.jar" ]
