kube/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-crud-app
spec:
  type: ClusterIP
  selector:
    app: user-crud-app
  ports:
    - port: 8080
      targetPort: 8080
